QA improvments